Version 0.11.2
------------------------------------------------------------------------------
General:
* Fixed examples, to resolve issues with CRAN package checks.

Version 0.11.1
------------------------------------------------------------------------------
Changes to functions:
* `typical_value()` gets a "zero"-option for the `fun`-argument.
* Changes to `icc()`, which used `stats::sigma()` and thus required R-version 3.3 or higher. Now should depend on R 3.2 again.
* `se()` now also supports `stanreg` and `stanfit` objects.
* `hdi()` now also supports `stanfit`-objects.
* `std_beta()` gets a `ci.lvl`-argument, to specify the level of the calculated confidence interval for standardized coefficients.
* `get_model_pval()` is now deprecated. Please use `p_value()` instead.

New functions:
* `rope()` to calculate the region of practical equivalence for MCMC samples.

Version 0.11.0
------------------------------------------------------------------------------
General:
* Added vignettes for various functions.
* Fixed issue with latest tidyr-update on CRAN.

New functions:
* `grpmean()` to compute mean values by groups (One-way Anova).
* `hdi()` to compute high density intervals (HDI) for MCMC samples.
* `find_beta()` and `find_beta2()` to find the shape parameters of a Beta distribution.
* `find_normal()` and `find_cauchy()` to find the parameters of a normal or cauchy distribution.

Version 0.10.3
------------------------------------------------------------------------------
New functions:
* `typical_value()`, to return the typical value of a variable.
* `eta_sq()` and `omega_sq()` to compute (partial) eta-squared or omega-squared statistics for anova tables.
* `anova_stats()` to compute a complete model summary, including (partial) eta-squared and omega-squared statistics for anova tables, returned as tidy data frame.
* `svy_md()` as convenient shortcut to compute the median for variables from survey designs.