@@ -4,6 +4,7 @@ S3method(as.data.frame,sj_resample)
 S3method(as.integer,sj_resample)
 S3method(family,svyglm.nb)
 S3method(formula,svyglm.nb)
+S3method(hdi,brmsfit)
 S3method(hdi,default)
 S3method(hdi,stanfit)
 S3method(hdi,stanreg)
@@ -11,6 +12,7 @@ S3method(model.frame,gee)
 S3method(model.frame,gls)
 S3method(model.frame,svyglm.nb)
 S3method(model.matrix,gls)
+S3method(neff_ratio,stanreg)
 S3method(plot,sj_inequ_trend)
 S3method(predict,svyglm.nb)
 S3method(print,icc.lme4)
@@ -28,6 +30,8 @@ S3method(print,sjstats_pred_accuracy)
 S3method(print,sjstats_r2)
 S3method(print,sjstats_zcf)
 S3method(print,svyglm.nb)
+S3method(rhat,stanreg)
+S3method(rope,brmsfit)
 S3method(rope,default)
 S3method(rope,stanfit)
 S3method(rope,stanreg)
@@ -76,6 +80,7 @@ export(mn)
 export(mse)
 export(multicollin)
 export(mwu)
+export(neff_ratio)
 export(normality)
 export(odds_to_rr)
 export(omega_sq)
@@ -93,6 +98,7 @@ export(re_var)
 export(reliab_test)
 export(resp_val)
 export(resp_var)
+export(rhat)
 export(rmse)
 export(robust)
 export(rope)
@@ -108,6 +114,7 @@ export(svy)
 export(svy_md)
 export(svyglm.nb)
 export(table_values)
+export(tidy_stan)
 export(typical_value)
 export(var_pop)
 export(weight)
@@ -132,8 +139,10 @@ importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,one_of)
+importFrom(dplyr,pull)
 importFrom(dplyr,quos)
 importFrom(dplyr,select)
+importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
 importFrom(glmmTMB,VarCorr)
 importFrom(glmmTMB,fixef)
@@ -161,6 +170,7 @@ importFrom(purrr,map_dbl)
 importFrom(purrr,map_df)
 importFrom(purrr,map_if)
 importFrom(purrr,map_lgl)
+importFrom(purrr,modify_if)
 importFrom(purrr,walk)
 importFrom(pwr,pwr.f2.test)
 importFrom(rlang,.data)
@@ -200,6 +210,7 @@ importFrom(stats,glm)
 importFrom(stats,kruskal.test)
 importFrom(stats,lm)
 importFrom(stats,logLik)
+importFrom(stats,mad)
 importFrom(stats,median)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
