@@ -615,3 +615,65 @@ print.sj_revar <- function(x, ...) {
     }
   }
 }
+
+
+#' @importFrom tibble rownames_to_column
+#' @export
+rhat.stanreg <- function(object, pars, ...) {
+  # get stan summary, with rhat stats
+  xds <- object$stan_summary %>%
+    as.data.frame() %>%
+    tibble::rownames_to_column()
+
+  # select specific terms only
+  if (!missing(pars) && !is.null(pars)) {
+    if (is.numeric(pars))
+      out <- xds[["Rhat"]][pars]
+    else
+      out <- xds[["Rhat"]][match(pars, xds[["rowname"]])]
+  }
+
+  out
+}
+
+
+#' @export
+rhat <- function(object, pars = NULL, ...) {
+  UseMethod("rhat")
+}
+
+#' @export
+neff_ratio <- function(object, pars = NULL, ...) {
+  UseMethod("neff_ratio")
+}
+
+
+#' @export
+rhat.stanreg <- function(object, pars = NULL, ...) {
+  stan_stats(object, pars, "Rhat", ...)
+}
+
+
+#' @export
+neff_ratio.stanreg <- function(object, pars = NULL, ...) {
+  stan_stats(object, pars, "n_eff", ...)
+}
+
+
+#' @importFrom tibble rownames_to_column
+stan_stats <- function(object, pars, stat, ...) {
+  # get stan summary, with rhat stats
+  xds <- object$stan_summary %>%
+    as.data.frame() %>%
+    tibble::rownames_to_column()
+
+  # select specific terms only
+  if (!missing(pars) && !is.null(pars)) {
+    if (is.numeric(pars))
+      out <- xds[[stat]][pars]
+    else
+      out <- xds[[stat]][match(pars, xds[["rowname"]])]
+  }
+
+  out
+}
