@@ -3,6 +3,13 @@ Version 0.11.2
 General:
 * Fixed examples, to resolve issues with CRAN package checks.
 
+New functions:
+* `tidy_stan()` to return a tidy summary of stanreg-objects.
+* S3-methods `rhat()` and `neff_ratio()` for `stanreg`-models.
+
+Changes to functions:
+* `hdi()` and `rope()` now also work for `brmsfit`-models, from package *brms*.
+
 Version 0.11.1
 ------------------------------------------------------------------------------
 Changes to functions:
